Attemped fix of horizontal overflow. 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,8 @@ input, select, textarea {
 	html {
 		box-sizing: border-box;
 		overflow-x: hidden;
+		width: 100%;
+		height: 100%;
 	}
 
 	*, *:before, *:after {
